--- a/portal-web/build.xml
+++ b/portal-web/build.xml
@@ -5,11 +5,9 @@
 
 	<property name="war.file" value="${ant.project.name}" />
 
-	<property name="alloy.version" value="3.0.1" />
-	<property name="alloy-font-awesome.version" value="2.0" />
 	<property name="vaadin.file" value="vaadin-6.8.12-liferay.zip" />
 
-	<property name="front.end.js.web.path" value="../modules/frontend/frontend-js-web" />
+	<property name="front.end.css.web.path" value="../modules/frontend/frontend-css-web" />
 
 	<path id="jspc.common.classpath">
 		<pathelement path="docroot/WEB-INF/classes" />
@@ -46,153 +44,7 @@
 		<pathelement location="${project.dir}/lib/portal/struts.jar" />
 	</path>
 
-	<extension-point name="build-portal-web-dependencies" depends="build-bourbon,build-css,build-dtd,build-vaadin" />
-
-	<target name="build-alloy-bootstrap">
-		<property name="alloy.bootstrap.version" value="3.2.0-2" />
-
-		<property name="alloy.bootstrap.deploy" value="docroot/html/themes/_unstyled/css/aui" />
-
-		<property name="alloy.bootstrap.file" value="bootstrap-sass-${alloy.bootstrap.version}.zip" />
-
-		<property name="alloy.bootstrap.tmp.dir" value="docroot/html/ALLOY_BOOTSTRAP_ZIP" />
-
-		<if>
-			<not>
-				<uptodate
-					srcfile="third-party/${alloy.bootstrap.file}"
-					targetfile="${alloy.bootstrap.deploy}"
-				/>
-			</not>
-			<then>
-
-				<!-- Prepare -->
-
-				<delete dir="${alloy.bootstrap.tmp.dir}" />
-				<delete dir="${alloy.bootstrap.deploy}" />
-
-				<unzip src="third-party/${alloy.bootstrap.file}" dest="${alloy.bootstrap.tmp.dir}" />
-
-				<!-- CSS -->
-
-				<property name="alloy.bootstrap.lib.dir" value="${alloy.bootstrap.tmp.dir}/bootstrap-sass-${alloy.bootstrap.version}/assets/stylesheets" />
-
-				<delete failonerror="false" includeemptydirs="true" quiet="true">
-					<fileset
-						dir="${alloy.bootstrap.lib.dir}"
-						includes="_bootstrap-*.scss"
-					/>
-				</delete>
-
-				<copy todir="${alloy.bootstrap.deploy}" overwrite="true" preservelastmodified="true">
-					<fileset dir="${alloy.bootstrap.lib.dir}/" />
-				</copy>
-
-				<!-- Glyphicons font -->
-
-				<property name="alloy.bootstrap.fonts.lib.dir" value="${alloy.bootstrap.tmp.dir}/bootstrap-sass-${alloy.bootstrap.version}/assets/fonts/bootstrap" />
-
-				<copy todir="${alloy.bootstrap.deploy}/glyphicons/font" overwrite="true" preservelastmodified="true">
-					<fileset dir="${alloy.bootstrap.fonts.lib.dir}/" />
-				</copy>
-
-				<!-- Clean up -->
-
-				<delete dir="${alloy.bootstrap.tmp.dir}" />
-			</then>
-		</if>
-	</target>
-
-	<target name="build-alloy-themes">
-		<path id="alloy.zip.path">
-			<fileset dir="third-party">
-				<include name="alloy-${alloy.version}*.zip" />
-			</fileset>
-		</path>
-
-		<property name="alloy.zip.path" refid="alloy.zip.path" />
-
-		<basename file="${alloy.zip.path}" property="alloy.file" />
-
-		<property name="alloy.dir" value="${front.end.js.web.path}/tmp/aui" />
-
-		<if>
-			<not>
-				<uptodate
-					srcfile="third-party/${alloy.file}"
-					targetfile="${alloy.dir}"
-				/>
-			</not>
-			<then>
-				<ant-execute
-					ant.build.file="build.xml"
-					ant.dir="${front.end.js.web.path}"
-					ant.target="build-alloy"
-				/>
-			</then>
-		</if>
-
-		<delete dir="docroot/html/themes/_unstyled/images/aui" />
-
-		<for param="dir">
-			<path>
-				<dirset
-					dir="${alloy.dir}"
-					includes="aui-*"
-				/>
-			</path>
-			<sequential>
-				<basename property="dir.name" file="@{dir}" />
-				<if>
-					<available file="${alloy.dir}/${dir.name}/assets/skins/sam" />
-					<then>
-						<copy todir="docroot/html/themes/_unstyled/images/aui" preservelastmodified="true">
-							<fileset dir="{alloy.dir}/${dir.name}/assets/skins/sam" includes="**/*.png,**/*.jpg,**/*.gif" />
-						</copy>
-					</then>
-				</if>
-			</sequential>
-		</for>
-
-		<copy todir="docroot/html/themes/_unstyled/images/aui" preservelastmodified="true">
-			<fileset dir="${alloy.dir}/aui-skin-deprecated/images" />
-		</copy>
-
-		<copy
-			file="${alloy.dir}/aui_deprecated.css"
-			tofile="docroot/html/css/portal/aui_deprecated.css"
-			overwrite="true"
-		/>
-	</target>
-
-	<target name="build-alloy-font-awesome" depends="build-alloy-bootstrap">
-		<path id="alloy-font-awesome.zip.path">
-			<fileset dir="third-party">
-				<include name="alloy-font-awesome-${alloy-font-awesome.version}*.zip" />
-			</fileset>
-		</path>
-
-		<property name="alloy-font-awesome.zip.path" refid="alloy-font-awesome.zip.path" />
-
-		<basename file="${alloy-font-awesome.zip.path}" property="alloy-font-awesome.file" />
-
-		<if>
-			<not>
-				<uptodate
-					srcfile="third-party/${alloy-font-awesome.file}"
-					targetfile="${alloy.bootstrap.deploy}/alloy-font-awesome"
-				/>
-			</not>
-			<then>
-				<delete dir="${alloy.bootstrap.deploy}/alloy-font-awesome" />
-
-				<unzip src="third-party/${alloy-font-awesome.file}" dest="${alloy.bootstrap.deploy}" />
-
-				<delete dir="${alloy.bootstrap.deploy}/alloy-font-awesome/css" />
-				<delete dir="${alloy.bootstrap.deploy}/alloy-font-awesome/less" />
-			</then>
-		</if>
-	</target>
+	<extension-point name="build-portal-web-dependencies" depends="build-css,build-dtd,build-vaadin" />
 
 	<target name="build-bourbon">
 		<property name="portal.common.dir" value="docroot/html/css/common" />
@@ -229,7 +81,7 @@
 		</if>
 	</target>
 
-	<target name="build-css" depends="build-themes">
+	<target name="build-css" depends="build-bourbon">
 		<property name="sass.tmp.dir" value="${basedir}/sass_tmp_dir" />
 
 		<mkdir dir="${sass.tmp.dir}" />
@@ -249,9 +101,7 @@
 			<jvmarg value="-Djava.io.tmpdir=${sass.tmp.dir}" />
 			<jvmarg value="-Djava.util.logging.config.file=${project.dir}/portal-impl/src/com/liferay/portal/tools/dependencies/portal-tools-logging.properties" />
 			<jvmarg value="-Dliferay.lib.portal.dir=${basedir}/../lib/portal" />
-			<arg value="sass.dir.0=/html/css" />
-			<arg value="sass.dir.1=/html/portlet" />
-			<arg value="sass.dir.2=/html/themes" />
+			<arg value="sass.dir.0=/html/portlet" />
 			<arg value="sass.docroot.dir=${basedir}/docroot" />
 			<arg value="sass.portal.common.dir=${basedir}/docroot/html/css/common" />
 		</java>
@@ -382,80 +232,6 @@
 		<echo file="${project.dir}/tools/selenium/extensions/ide.${user.name}.js">${ide.js.content}</echo>
 	</target>
 
-	<target name="build-themes" depends="build-alloy-bootstrap,build-alloy-themes,build-alloy-font-awesome,build-bourbon">
-		<for param="module.name">
-			<path>
-				<dirset dir="docroot/html/themes" excludes="_styled,_unstyled" includes="*" />
-			</path>
-			<sequential>
-				<if>
-					<available file="@{module.name}/_diffs/images" />
-					<then>
-						<for param="file">
-							<path>
-								<fileset
-									dir="@{module.name}/_diffs/images"
-									includes="**/screenshot.png"
-								/>
-							</path>
-							<sequential>
-								<propertyregex input="@{file}" override="yes" property="thumbnail.file" regexp="screenshot\.png" replace="thumbnail\.png" />
-
-								<if>
-									<not>
-										<uptodate targetfile="${thumbnail.file}" srcfile="@{file}" />
-									</not>
-									<then>
-										<java
-											classname="com.liferay.portal.tools.ThumbnailBuilder"
-											classpathref="project.classpath"
-										>
-											<arg value="thumbnail.original.file=@{file}" />
-											<arg value="thumbnail.thumbnail.file=${thumbnail.file}" />
-											<arg value="thumbnail.height=120" />
-											<arg value="thumbnail.width=160" />
-											<arg value="thumbnail.overwrite=false" />
-										</java>
-									</then>
-								</if>
-							</sequential>
-						</for>
-					</then>
-				</if>
-
-				<copy todir="@{module.name}" overwrite="true" preservelastmodified="true">
-					<fileset
-						dir="docroot/html/themes/_unstyled"
-						excludes="templates/init.ftl,templates/init.vm"
-					/>
-				</copy>
-
-				<copy todir="@{module.name}" overwrite="true" preservelastmodified="true">
-					<fileset
-						dir="docroot/html/themes/_styled"
-					/>
-				</copy>
-
-				<if>
-					<available file="@{module.name}/_diffs" />
-					<then>
-						<copy todir="@{module.name}" overwrite="true" preservelastmodified="true">
-							<fileset
-								dir="@{module.name}/_diffs"
-							/>
-						</copy>
-					</then>
-				</if>
-			</sequential>
-		</for>
-
-		<copy
-			file="docroot/html/themes/_unstyled/images/favicon.ico"
-			preservelastmodified="true"
-			todir="docroot"
-		/>
-	</target>
-
 	<target name="build-vaadin">
 		<if>
 			<not>
@@ -492,12 +268,10 @@
 		</if>
 	</target>
 
-	<target name="clean" depends="build-common-web.clean,clean-css,clean-themes,clean-tlds">
+	<target name="clean" depends="build-common-web.clean,clean-css,clean-tlds">
 		<delete dir="classes" />
 		<delete dir="docroot/dtd" />
 		<delete dir="docroot/html/portal/aui" />
-		<delete dir="docroot/html/themes/_unstyled/images/aui/" />
-		<delete dir="docroot/html/themes/classic/color_schemes" />
 		<delete dir="docroot/html/VAADIN" />
 		<delete dir="docroot/WEB-INF/classes" />
 		<delete dir="docroot/WEB-INF/lib" />
@@ -506,27 +280,10 @@
 	</target>
 
 	<target name="clean-css">
-		<delete includeemptydirs="true">
-			<fileset dir="docroot/html/css" includes="**/.sass-cache/**,**/.sass_cache_*.css,**/_sass_cache_*.css" />
+ 		<delete includeemptydirs="true">
+			<fileset dir="docroot/html/css/common/bourbon" />
 			<fileset dir="docroot/html/portlet" includes="**/.sass-cache/**,**/.sass_cache_*.css,**/_sass_cache_*.css" />
-			<fileset dir="docroot/html/themes" includes="**/.sass-cache/**,**/.sass_cache_*.css,**/_sass_cache_*.css" />
 		</delete>
-	</target>
-
-	<target name="clean-themes">
-		<for param="module.name">
-			<path>
-				<dirset dir="docroot/html/themes" excludes="_styled,_unstyled" includes="*" />
-			</path>
-			<sequential>
-				<delete includeemptydirs="true" quiet="true" failonerror="false">
-					<fileset
-						dir="@{module.name}"
-						excludes="**/_diffs/**"
-					/>
-				</delete>
-			</sequential>
-		</for>
 	</target>
 
 	<target name="clean-tlds">
